optimized for vercel

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,16 @@
-DATABASE_URL=
-JWT_SECRET=
-NEXT_PUBLIC_API_URL=
+# Database Configuration
+DATABASE_URL="your_mongodb_connection_string"
+
+# Authentication
+JWT_SECRET="your_jwt_secret_key"
+
+# API Configuration
+NEXT_PUBLIC_API_URL="http://localhost:3000/api"
+
+# NextAuth Configuration
+NEXTAUTH_SECRET="your_nextauth_secret"
+NEXTAUTH_URL="http://localhost:3000"
+
+# In production (Vercel)
+# NEXTAUTH_URL="https://your-app.vercel.app"
+# NEXT_PUBLIC_API_URL="https://your-app.vercel.app/api"
